--- a/src/trach_reservations/ReservationDialog.form
+++ b/src/trach_reservations/ReservationDialog.form
@@ -391,6 +391,9 @@
               <Image iconType="3" name="/icon24/search24.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSearchCusActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel14">
           <Properties>
